// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate decorator should add Validate metadata to a method when decorated with @Validate 1`] = `
{
  "test": [
    PropDecoratorFactory {
      "method": "get",
      "path": "/",
    },
    DecoratorFactory {
      "ids": [
        ValidatePipe {
          "options": DecoratorFactory {
            "disableErrorMessages": false,
            "exceptionFactory": [Function],
            "transform": false,
            "transformOptions": {},
            "validatorOptions": {
              "validationError": {
                "target": false,
              },
            },
          },
        },
      ],
    },
    DecoratorFactory {
      "disableErrorMessages": false,
      "exceptionFactory": [Function],
      "transform": false,
      "transformOptions": {},
      "validatorOptions": {
        "validationError": {
          "target": false,
        },
      },
    },
  ],
}
`;

exports[`Validate decorator should add Validate metadata to a method when decorated with @Validate(validatorOptions) 1`] = `
{
  "test": [
    PropDecoratorFactory {
      "method": "get",
      "path": "/",
    },
    DecoratorFactory {
      "ids": [
        ValidatePipe {
          "options": DecoratorFactory {
            "disableErrorMessages": false,
            "exceptionFactory": [Function],
            "transform": true,
            "transformOptions": {},
            "validatorOptions": {
              "validationError": {
                "target": false,
              },
            },
          },
        },
      ],
    },
    DecoratorFactory {
      "disableErrorMessages": false,
      "exceptionFactory": [Function],
      "transform": true,
      "transformOptions": {},
      "validatorOptions": {
        "validationError": {
          "target": false,
        },
      },
    },
  ],
}
`;
